# ZXH_ADAE

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  LICENSE  README.md  aggregate.sh  docker_interactive.sh  install_zxh.sh  prepare.sh  run_all.sh
src/: env.sh  near30_families.csv
src/pydeps/antlr4_python3_runtime-4.13.2.dist-info/: RECORD
src/pydeps/mqt/bench/: _version.py
src/pydeps/mqt/core/: _version.py
src/pydeps/mqt/core/lib64/: libmqt-core-circuit-optimizer.so.3.4  libmqt-core-dd.so.3.4  libmqt-core-fomac.so.3.4  libmqt-core-ir.so.3.4.1  libmqt-core-na-fomac.so.3.4  libmqt-core-qasm.so.3.4  libmqt-core-qdmi-common.so.3.4  libmqt-core-qdmi-ddsim-device.so.3.4  libmqt-core-qdmi-driver.so.3.4  libmqt-core-qdmi-na-device-gen.so.3.4.1  libmqt-core-qdmi-na-device.so.3.4  libmqt-core-qdmi-sc-device-dyn.so.3.4.1  libmqt-core-qdmi-sc-device.so.3.4.1  libmqt-core-zx.so.3.4.1  libspdlog.so.1.17
src/pydeps/mqt/core/lib64/pkgconfig/: spdlog.pc
src/pydeps/mqt/core/share/pkgconfig/: nlohmann_json.pc
src/pydeps/mqt/ddsim/: _version.py
src/pydeps/mqt_bench-2.2.2.dist-info/: METADATA  RECORD
src/pydeps/mqt_core-3.4.1.dist-info/: METADATA  RECORD
src/pydeps/mqt_ddsim-2.2.0.dist-info/: METADATA  RECORD
src/pydeps/openqasm3-1.0.1.dist-info/: RECORD
src/pydeps/qblaze-0.1.0.dist-info/: RECORD
src/pydeps/qiskit_qasm3_import-0.6.0.dist-info/: RECORD
src/pydeps/scikit_build_core-0.12.2.dist-info/: RECORD
src/pydeps/zxhsim/: __init__.pyi  gate_sets.py  qiskit_backend.py
src/pydeps/zxhsim-0.4.3.dist-info/: METADATA  RECORD  WHEEL  direct_url.json  entry_points.txt
src/scripts/: backend_registry.py  circuit_generator.py  run_common.py  run_near30.py  run_p_batch.py  run_single_circuit.py  run_sweep.py  sc_capability_redraw.py  sc_figure_redraw_v4.py  sc_representative_ablation_sameframe_redraw.py  suite_registry.py
src/suites/: bv_sweep.csv  near30.csv  qft_sweep.csv  qwalk_sweep.csv  vqe_two_local_sweep.csv
src/zxh/: .clang-format  .gitignore  CMakeLists.txt  README.md  env_template.sh  pyproject.toml
src/zxh/benchmarks/: README.md  manifest.yaml  prepare_suite.py  stage.py
src/zxh/benchmarks/ADAE/: README.md
src/zxh/benchmarks/ADAE/aggregate/: README.md
src/zxh/benchmarks/ADAE/aggregate/scripts/: aggregate_all.py  aggregate_representative_cuda.py
src/zxh/benchmarks/ADAE/figures/: README.md
src/zxh/benchmarks/ADAE/prepare/: README.md
src/zxh/benchmarks/ADAE/prepare/generators/: README.md  generate_all.py  generate_mqt_family.py  generate_static_near30_cases.py  optimize_qaoa_lowbits.py
src/zxh/benchmarks/ADAE/prepare/generators/mqt_workflow/: __init__.py  analyze.py  canonical_ir.py  canonicalize.py  common.py  filter.py  scan.py  sweep.py
src/zxh/benchmarks/ADAE/prepare/scripts/: install_python_frontends.py  prepare_all.py
src/zxh/benchmarks/ADAE/results/: README.md
src/zxh/benchmarks/ADAE/run/: README.md
src/zxh/benchmarks/ADAE/run/scripts/: probe_cudaq_gpu_memory.py  reaggregate_capability_corrected.py  run_all.py  run_backend_cudaq.py  run_backend_ddsim.py  run_backend_qblaze.py  run_backend_zxh_cuda.py  run_representative_cuda.py  runner_common.py
src/zxh/benchmarks/reports/: aggregate.py
src/zxh/benchmarks/runners/: diag_batch_microbench.py  env_capture.py  run_suite.py
src/zxh/benchmarks/suites/: dev2_mpi_cuda.yaml  dev_mpi_cuda.yaml  kernel_profile_m26_mpi_cuda.yaml  kernel_profile_m30_mpi_cuda.yaml  qaoa_cuda.yaml  qft_cuda.yaml  smoke_cuda.yaml  smoke_mpi.yaml  smoke_mpi_cuda.yaml  smoke_mpi_omp.yaml  smoke_omp.yaml  smoke_single.yaml  vqe_su2_cuda.yaml  vqe_two_local_cuda.yaml
src/zxh/benchmarks/workloads/qasm/: ghz_n16.qasm  ghz_n20.qasm  ghz_n24.qasm  ghz_n28.qasm  ghz_n32.qasm  h_11_inter_worker_delta.qasm  h_1_balanced.qasm  kernel_crz_dom_n26.qasm  kernel_crz_dom_n30.qasm  kernel_h_expand_only_n26.qasm  kernel_h_expand_only_n30.qasm  kernel_h_inter_dom_n26.qasm  kernel_h_inter_dom_n30.qasm  kernel_h_intra_dom_n26.qasm  kernel_h_intra_dom_n30.qasm  kernel_rz_dom_n26.qasm  kernel_rz_dom_n30.qasm  qaoa_n21.qasm  qaoa_n22.qasm  qaoa_n23.qasm  qaoa_n24.qasm  qaoa_n25.qasm  qaoa_n26.qasm  qaoa_n27.qasm  qaoa_n28.qasm  qaoa_n29.qasm  qaoa_n30.qasm  qaoa_n31.qasm  qaoa_n32.qasm  qft_n21.qasm  qft_n22.qasm  qft_n23.qasm  qft_n24.qasm  qft_n25.qasm  qft_n26.qasm  qft_n27.qasm  qft_n28.qasm  qft_n29.qasm  qft_n30.qasm  qft_n31.qasm  (+27 more)
src/zxh/cmake/: ZXHSimCuBridgeCompat.cmake
src/zxh/docs/: benchmark.md  deployment.md  roadmap.md  tech_spec.md  testing.md  user_guide.md
src/zxh/examples/cpp/: driver_cat.cpp
src/zxh/examples/python/: check_unsupported_gates.py  driver_cat.py  driver_qasm.py
src/zxh/include/zxhsim/: comm.h  defs.h  kernels.h  measure.h  mem.h  runtime.h  sv.h  types.h  utils.h  zxh.h
src/zxh/src/: runtime_internal.h
src/zxh/src/comm/: comm_general.cpp  comm_mpi.cpp  comm_mpi_cuda.cu  comm_mpi_cuda_transport.h  comm_mpi_cuda_transport_nccl.cu
src/zxh/src/core/: addr.cpp  bitmat.cpp  bitvec.cpp  selector.cpp  utils.cpp  zxh.cpp
src/zxh/src/kernel/: kernel_cuda.cu  kernel_general.cpp  kernel_omp.cpp
src/zxh/src/measure/: measure_common.cpp  measure_cuda.cu  measure_general.cpp  measure_internal.h  measure_mpi.cpp  measure_mpi_cuda.cu  measure_result_pack.h  measure_streaming_impl.h
src/zxh/src/mem/: mem_cuda.cu  mem_host.cpp
src/zxh/src/pybind/: bindings.cpp
src/zxh/src/runtime/: runtime_general.cpp  runtime_mpi.cpp  runtime_mpi_cuda.cu
src/zxh/src/sv/: sv_common.cpp  sv_internal.h  sv_mpi_cuda.cu
src/zxh/tests/integration/: README.md  manifest.py  manifest.yaml  oracles.py  run_suite.py
src/zxh/tests/integration/cases/: README.md  u3_1_balanced.qasm  x_1_delta.qasm
src/zxh/tests/unit/: test_adae_run_representative_cuda.py  test_circ_optimizer.py  test_measure_api.py  test_mqt_workflow_common.py  test_mqt_workflow_sweep.py  test_qasm_load_circuit.py  test_workflow_canonical_ir.py  test_zxhsim_analyzer.py
src/zxh/tools/: backend_registry.py  shared_stage.py
src/zxh/zxhsim/: __init__.py  _agl.py  analyzer.py  circ_optimizer.py  qasm.py
(+3 files in other folders)
